# mwe-rs-autocxx

./: Cargo.toml  README.md  build.rs  log.txt
cxx/: rank_bv.cc  rank_bv.h
src/: ffi.rs  main.rs  rank_bv.rs  tiered_vec.rs
